--- a/CrecheApp/src/com/wesley/creche/client/desktop/Administration/AdministrationForm.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/Administration/AdministrationForm.form
@@ -125,8 +125,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Century Gothic" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Child"/>
+        <Property name="text" type="java.lang.String" value="Child Progress"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
